Removed extra padding rule to fix cut-off input text in Firefox 52.0
There was an extra padding rule that bumped input padding to 20px
(instead of 10px), and this was causing text to be cut-off in Firefox
52.0. By removing the extra padding rule, padding goes back to 10px &
looks good! (Also, I’m committing the compiled CSS since it’s in the
repo.)

--- a/src/styles/styles.1.19.less
+++ b/src/styles/styles.1.19.less
@@ -18,7 +18,7 @@ body{
   height: 100%;
 }
 body{
-  background: url('../images/background/geometry-alt.png');  
+  background: url('../images/background/geometry-alt.png');
 }
 header,
 section,
@@ -69,7 +69,6 @@ button{
   margin: 0 auto;
   padding: 10px;
   font-size: 0.8em;
-  padding: 20px;
   cursor: pointer;
 }
 input{
@@ -106,7 +105,7 @@ button{
     float: right;
     margin-top: 0em;
     border: none;
-  } 
+  }
 }
 h1{
   font-family: "Lobster";
